# anubis

./: .gitignore  README.md
backend/: pyproject.toml
backend/gpt_engineer/web/backend/: main.py
backend/gpt_engineer/web/frontend/: app.js  index.html
backend/src/api/: main.py
backend/src/api/models/: files.py  gpt.py  workspace.py
backend/src/api/routers/: files.py  gpt.py  workspace.py
backend/src/api/services/: gpt_service.py
backend/tests/: conftest.py
backend/tests/api/routers/: test_files.py  test_workspace.py
backend/tests/api/services/: test_gpt_service.py
docs/: 25-1-29.md  @25-1-29.md
frontend/: gulpfile.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/public/: manifest.json  service-worker.js
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/Editor/: Editor.css  Editor.tsx
frontend/src/components/FileExplorer/: FileExplorer.css  FileExplorer.tsx
frontend/src/components/Workbench/: Workbench.css  Workbench.tsx
frontend/src/hooks/: useApi.ts
