[project]
name = "anubis-backend"
version = "0.1.0"
description = "Anubis IDE backend service"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-dotenv>=1.0.0",
    "gpt-engineer>=0.2.0"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "anubis-backend"
version = "0.1.0"
description = "Anubis IDE backend service"
authors = ["Your Name <your.email@example.com>"]
package-mode = false
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
gpt-engineer = "^0.2.0"
aiofiles = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3 